# azure-todo-app

./: .gitignore  .pre-commit-config.yaml  README.md  package.json  pyproject.toml  swa-cli.config.json
.github/: copilot-instructions.md
api/: function_app.py  pyproject.toml  requests.http  requirements.txt  test_todos.py  todos.py
api/tests/: test_todos.py
frontend/: App.js
infra/: deploy.sh  main.bicep
