[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "azure-data-tables>=12.7.0",
    "azure-functions>=1.23.0"
]

[dependency-groups]
dev = [
    "pre-commit>=3.8.0",
    "pytest>=8.4.2",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
